--- a/.zenoh_docker/zenoh-myhome.json5
+++ b/.zenoh_docker/zenoh-myhome.json5
@@ -9,6 +9,16 @@
       listen: true,
     },
   },
+  /// Configuration of data messages timestamps management.
+  timestamping: {
+    /// Whether data messages should be timestamped if not already.
+    /// Accepts a single boolean value or different values for router, peer and client.
+    enabled: { router: true, peer: true, client: true },
+    /// Whether data messages with timestamps in the future should be dropped or not.
+    /// If set to false (default), messages with timestamps in the future are retimestamped.
+    /// Timestamps are ignored if timestamping is disabled.
+    drop_future_timestamp: false,
+  },
   plugins: {
     rest: {
       // activate and configure the REST plugin
