feat: working in docker and outside docker

--- a/.zenoh_docker/zenoh-myhome.json5
+++ b/.zenoh_docker/zenoh-myhome.json5
@@ -1,5 +1,6 @@
 {  
-  mode: "peer",
+//   mode: "peer",
+  mode: "router",  // need to run in router mode so we can connect from outside the container.
   scouting: {
     multicast: {
       enabled: true,
