feat: add basic tests.

--- a/compose.yml
+++ b/compose.yml
@@ -28,7 +28,8 @@ services:
   networkedx:  # the experimental script.
     init: true
     build: .
-    command: ["uv", "run", "src/networkedx/main.py"]
+    # command: ["uv", "run", "src/networkedx/main.py"]
+    command: ["nx"]
     depends_on:
         - zenoh
     # volumes:
