--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,24 +1,17 @@
 [project]
 name = "networkedx"
 version = "0.1.0"
-description = "Add your description here"
+description = "Sync and use a networkX graph between multiple hosts through the power of Zenoh storages."
 readme = "README.md"
 requires-python = ">=3.10"
-dependencies = [
-    "eclipse-zenoh>=1.0.0",
-    # "eclipse-zenoh>=0.11.0",
-    "humid>=0.3.1",
-    "matplotlib>=3.9.2",
-    "networkx>=3.4.1",
-    "scipy>=1.14.1",
-    # put your dependencies here
-]
+dependencies = ["eclipse-zenoh>=1.0.0", "matplotlib>=3.9.2", "networkx>=3.4.1"]
 
 [project.scripts]
 nx = "networkedx.main:main"
 
 [project.optional-dependencies]
 test = ["pytest>=8.3.3"]
+examples = ["humid>=0.3.1"]
 
 [tool.uv]
 package = true
