--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ nx = "networkedx.main:main"
 
 [project.optional-dependencies]
 test = ["pytest>=8.3.3"]
+docs = ["mkdocs-material>=9.5.33", "mkdocstrings-python>=1.10.9"]
 examples = ["humid>=0.3.1"]
 
 [tool.uv]
