fix: update docs title

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: humid Docs
+site_name: networkedx Docs
 repo_url: https://github.com/h0uter/networkedx # backlink to repo
 repo_name: networkedx # name to display on backlink to repo
 
