--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,10 @@ nx = "meshnetworkx.main:main"
 [project.optional-dependencies]
 test = ["pytest>=8.3.3"]
 docs = ["mkdocs-material>=9.5.33", "mkdocstrings-python>=1.10.9"]
-examples = ["humid>=0.3.1"]
+examples = [
+    "humid>=0.3.1",
+    "nicegui>=2.5.0",
+]
 
 [tool.uv]
 package = true
