--- a/compose.yml
+++ b/compose.yml
@@ -26,6 +26,10 @@ services:
   meshnetworkx:  # the experimental script.
     init: true
     build: .
-    command: ["uv", "run", "examples/main.py"]
+    command: ["uv", "run", "examples/two_device/main.py"]
     depends_on:
         - zenoh
+    environment:
+      ZENOH_ENDPOINTS: tcp/localhost:7447
+    ports:
+      - 8080:8080
