feat: add volume mapping in compose.yml and update meshnetworkx version to 0.1.2

--- a/compose.yml
+++ b/compose.yml
@@ -27,6 +27,8 @@ services:
     init: true
     build: .
     command: ["uv", "run", "examples/two_device/main.py"]
+    volumes:
+      - ./examples:/workdir/examples/
     depends_on:
         - zenoh
     # environment:
