feat: add source volume mapping in compose.yml for improved file access

--- a/compose.yml
+++ b/compose.yml
@@ -29,6 +29,7 @@ services:
     command: ["uv", "run", "examples/two_device/main.py"]
     volumes:
       - ./examples:/workdir/examples/
+      - ./src:/workdir/src/
     depends_on:
         - zenoh
     # environment:
