--- a/.zenoh/meshnetworkx.json5
+++ b/.zenoh/meshnetworkx.json5
@@ -29,12 +29,24 @@
       // activate and configure the storage_manager plugin
       storages: {
         myhome: {
-          // configure a "myhome" storage
-          key_expr: "graph/**", // which subscribes and replies to query on myhome/**
-          volume: {
+            // configure a "myhome" storage
+            key_expr: "graph/**", // which subscribes and replies to query on myhome/**
+            volume: {
             // and using the "memory" volume (always present by default)
             id: "memory",
-          },
+
+            },
+            // This field was named replica_config.
+            "replication": {
+            // This field was named publication_interval.
+            "interval": 10,
+            // This field was named delta.
+            "sub_intervals": 5,
+            "propagation_delay": 250,
+            // These fields did not exist before.
+            "hot": 6,
+            "warm": 30,
+            }
         },
       },
     },
