--- a/compose.yml
+++ b/compose.yml
@@ -32,7 +32,8 @@ services:
       - ./src:/workdir/src/
     depends_on:
         - zenoh
-    # environment:
-    #   ZENOH_ENDPOINTS: tcp/localhost:7447
+    environment:
+      # ZENOH_ENDPOINTS: tcp/localhost:7447
+      MACHINE: 1
     ports:
       - 8080:8080
